--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@
 body {
   height: 100vh;
   width: 100%;
-  overflow: hidden;
 }
 .contenido-mostrar,
 main {
-  height: 85.8%;
+  height: 81.4vh;
   background-image: url(img/fondo.png);
   display: flex;
   justify-content: center;
@@ -27,6 +26,7 @@ main {
   overflow-y: scroll;
 }
 
+
 .formulario-fondo-editar,
 .formulario-fondo-crear,
 .formulario-fondo {
@@ -37,6 +37,25 @@ main {
   align-items: center;
   opacity: 0.7;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+
+.fondo-mensaje{
+  height: 30%;
+  width: 30%;
+  background-color: #ECE8E1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  opacity: 0.7;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.formulario-fondo-mensaje{
+  width: 60%;
+  height: 50%;
+  
 }
 
 .formulario-fondo {
@@ -111,6 +130,7 @@ h1 {
 
 
 footer {
+  height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -170,7 +190,6 @@ textarea {
 .habilidad {
   height: 50px;
   width: 50px;
-  filter: invert(100%);
 }
 
 .habilidades {
